# shm_video_transmission

./: CMakeLists.txt  README.md  demo_receiver.cpp  demo_sender.cpp  read_from_shared_memory.cpp  write_to_shared_memory.cpp
SHM_Video_Transmission/: shm_video_transmission.h
